# financial-wellbeing

./: .gitignore  Categories.py  household-income.xlsx  main.py  per-household-member-bydwelling.xlsx  per-household-member-byincome.xlsx  per-household-member-bynum.xlsx  pyproject.toml  requirements.txt  singstat-avg-household-exp.csv  singstat-avg-household-exp.pickle  singstat-avg-household-exp.xlsx
